--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled0.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNZsR6yRIddWrxoHUFcy4ch",
+      "authorship_tag": "ABX9TyMJqb6yT68B/yRN+bR2wnc0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,7 +63,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 72
         },
-        "outputId": "92712b37-0233-4daf-8915-e46120de5802"
+        "outputId": "8e281b74-7b16-42a6-9bb1-9a5e150654a3"
       },
       "source": [
         "from google.colab import files\n",
@@ -76,9 +76,9 @@
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-4c58afed-1259-4a43-ae4d-0e428704967c\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-19b1195e-deb4-43f0-9311-1e0461878367\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-4c58afed-1259-4a43-ae4d-0e428704967c\">\n",
+              "     <output id=\"result-19b1195e-deb4-43f0-9311-1e0461878367\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -95,7 +95,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Saving final pretouch dataset.csv to final pretouch dataset (2).csv\n"
+            "Saving final pretouch dataset - Copy.csv to final pretouch dataset - Copy.csv\n"
           ],
           "name": "stdout"
         }
@@ -110,9 +110,9 @@
       },
       "source": [
         "import io\n",
-        "df = pd.read_csv(io.BytesIO(uploaded['final pretouch dataset.csv']))"
+        "df = pd.read_csv(io.BytesIO(uploaded['final pretouch dataset - Copy.csv']))"
       ],
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -124,19 +124,228 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "d1b398dc-5bda-4f1f-ca54-dd4da53a516d"
+        "outputId": "d8e89a6d-6564-4015-9ffb-51ff06e929d5"
       },
       "source": [
         "print(df.columns)"
       ],
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Index(['Gender', 'AGENT G', 'VERT ', 'HORIZ', 'DISTANCE', 'r', 'z', 'theta'], dtype='object')\n"
+            "Index(['Gender', 'AGENT G', 'VERT ', 'HORIZ', 'DISTANCE'], dtype='object')\n"
           ],
           "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aHrd-7XraqKR",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def x_calculator(r,theta,phi):\n",
+        "  x = r * np.sin(theta) * np.cos(phi)\n",
+        "  return x"
+      ],
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ORwdrO83cDZP",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "df['x_score'] = x_calculator(df['DISTANCE'], df['VERT '], df['HORIZ'])"
+      ],
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fxLqnImyaqtQ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def y_calculator(r,theta,phi):\n",
+        "  y = r * np.sin(theta) * np.sin(phi)\n",
+        "  return y"
+      ],
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "G-8fieFjcEji",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "df['y_score'] = y_calculator(df['DISTANCE'], df['VERT '], df['HORIZ'])"
+      ],
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mK2jesYvarAJ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def z_calculator(r,theta):\n",
+        "  z = r * np.cos(theta)\n",
+        "  return z"
+      ],
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "N3hsiaBmcDPN",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "df['z_score'] = z_calculator(df['DISTANCE'], df['VERT '])"
+      ],
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8Su1UThCcC98",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 255
+        },
+        "outputId": "c9963ea8-7956-46d4-9d71-8d4f51c6f908"
+      },
+      "source": [
+        "print(df.head)"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<bound method NDFrame.head of       Gender  AGENT G  VERT   HORIZ  DISTANCE   x_score   y_score   z_score\n",
+            "0          2        2     10    -20  0.071402 -0.015852  0.035463 -0.059911\n",
+            "1          2        2    -20     10  0.125745  0.096324  0.062453  0.051314\n",
+            "2          2        2    -40    -25  0.120367 -0.088898 -0.011870 -0.080277\n",
+            "3          2        2    -40    -15  0.190486  0.107825  0.092298 -0.127042\n",
+            "4          2        2     30     25  0.074720 -0.073176  0.009771  0.011526\n",
+            "...      ...      ...    ...    ...       ...       ...       ...       ...\n",
+            "9636       1        1    -10     30  0.216241  0.018146 -0.116232 -0.181442\n",
+            "9637       1        1    -10     20  0.239993  0.053280  0.119195 -0.201371\n",
+            "9638       1        1      0     25  0.240726  0.000000 -0.000000  0.240726\n",
+            "9639       1        1    -10     -5  0.268437  0.041425  0.140037 -0.225238\n",
+            "9640       1        1    -45    -25  0.279043 -0.235350 -0.031425  0.146588\n",
+            "\n",
+            "[9641 rows x 8 columns]>\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "W9qIXWsAdkbo",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        },
+        "outputId": "3352a156-db91-471f-ab4a-b83b499f9a6b"
+      },
+      "source": [
+        "df.to_csv('x_y_z_added_df.csv') \n",
+        "files.download('x_y_z_added_df.csv')"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/javascript": [
+              "\n",
+              "    async function download(id, filename, size) {\n",
+              "      if (!google.colab.kernel.accessAllowed) {\n",
+              "        return;\n",
+              "      }\n",
+              "      const div = document.createElement('div');\n",
+              "      const label = document.createElement('label');\n",
+              "      label.textContent = `Downloading \"${filename}\": `;\n",
+              "      div.appendChild(label);\n",
+              "      const progress = document.createElement('progress');\n",
+              "      progress.max = size;\n",
+              "      div.appendChild(progress);\n",
+              "      document.body.appendChild(div);\n",
+              "\n",
+              "      const buffers = [];\n",
+              "      let downloaded = 0;\n",
+              "\n",
+              "      const channel = await google.colab.kernel.comms.open(id);\n",
+              "      // Send a message to notify the kernel that we're ready.\n",
+              "      channel.send({})\n",
+              "\n",
+              "      for await (const message of channel.messages) {\n",
+              "        // Send a message to notify the kernel that we're ready.\n",
+              "        channel.send({})\n",
+              "        if (message.buffers) {\n",
+              "          for (const buffer of message.buffers) {\n",
+              "            buffers.push(buffer);\n",
+              "            downloaded += buffer.byteLength;\n",
+              "            progress.value = downloaded;\n",
+              "          }\n",
+              "        }\n",
+              "      }\n",
+              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
+              "      const a = document.createElement('a');\n",
+              "      a.href = window.URL.createObjectURL(blob);\n",
+              "      a.download = filename;\n",
+              "      div.appendChild(a);\n",
+              "      a.click();\n",
+              "      div.remove();\n",
+              "    }\n",
+              "  "
+            ],
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/javascript": [
+              "download(\"download_a0368103-ea64-48cd-a0e0-6ef9d4544b96\", \"x_y_z_added_df.csv\", 838064)"
+            ],
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
         }
       ]
     },
@@ -394,6 +603,16 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IT18CwOzOUY-",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
+      ]
     }
   ]
 }
